fixed nav bar size on mobile and installed framer motion

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 .section {
-  @apply min-h-screen h-full pb-5 pt-[10%] p-4 md:pl-[8%]
+  @apply min-h-screen h-full pb-5 p-4 md:pl-[8%]
 }
 
 /* fonts */
